refactor: 로그인 화면단 코드 일부 수정